# The-Final-Frontier

./: .gitignore  CMakeLists.txt  Generate-Binaries.bat  README.md  main.cpp
Arithmetic/: Arithmetic.hpp  ArithmeticRef.cpp  ArithmeticSIMD.cpp
CPU_Info/: CPU_Info.h
Filter/: Filter.cpp  Filter.hpp  FilterMtBlocking.cpp  FilterRef.cpp  FilterSIMD.cpp
Functions/: Functions.hpp  FunctionsRef.cpp  FunctionsSIMD.cpp
Image/: Image.cpp  Image.hpp  utils.h
Image/stb_image/: stb_image.h  stb_image_write.h
ImagePredefined/: Grayscale.cpp  Grayscale.hpp  Inversion.cpp  Inversion.hpp
ImageProcessor/: ImageProcessor.cpp  ImageProcessor.hpp
Kernel/: emboss.txt  sharpen.txt  unsharp5x5.txt
Kernels/: gaussian5x5.txt  sharpen.txt  unsharp5x5.txt
Predefined/: Grayscale.cpp  Inversion.cpp
SIMD_Util/: SIMD_Util.h  avx_mathfun.h
Utils/: TimeDecorator.hpp  _Timer.h
inc/Filter/: Filter.hpp
inc/Image/stb_image/: stb_image.h  stb_image_write.h
inc/ImageProcessor/: ImageProcessor.hpp
inc/Predefined/: Grayscale.hpp
inc/SIMD_Util/: SIMD_Util.h  avx_mathfun.h
inc/Utils/: AlignedAllocator.h
src/: main.cpp
src/Arithmetic/: ArithmeticRef.cpp  ArithmeticSIMD.cpp
src/Filter/: FilterMtBlocking.cpp  FilterRef.cpp
src/Functions/: FunctionsRef.cpp  FunctionsSIMD.cpp
src/Image/: Image.cpp
src/ImageProcessor/: ImageProcessor.cpp
src/Predefined/: Grayscale.cpp  Inversion.cpp
